message ArrayInt{
    repeated int32 arrayInt = 1;
};

message HeadProtocol{
    optional int32        access_point_fd     = 1;    //接入点的句柄，接入后更改
    optional int32        source_id           = 2;    //来源ID
    optional int32        target_id           = 3;    //来源ID
    optional ArrayInt   pass_by_id            = 4;    //经过的路由的ID，跳转次数
    optional int32        proto_body_size     = 5;    //协议体长度
    optional int32        proto_body_status   = 6;    //协议体状态
    optional string     proto_body_name     = 7;    //协议体名字
    optional string     proto_body_buffer   = 8;    //协议体内容
};
